--- a/package.json
+++ b/package.json
@@ -25,7 +25,7 @@
     "build": "react-scripts build",
     "test": "react-scripts test",
     "eject": "react-scripts eject",
-    "homepage": "https://kedinger1178.github.io/portfolio",
+    "homepage": "https://kendraeux.com",
     "predeploy": "npm run build",
     "deploy": "gh-pages -d build"
   },
